--- a/ESAME_IQP.ipynb
+++ b/ESAME_IQP.ipynb
@@ -133,7 +133,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "FILE = \"./TEST_SETS/test_2.txt\""
+    "FILE = \"./TEST_SETS/test_1.txt\""
    ]
   },
   {
@@ -374,11 +374,11 @@
      "text": [
       "\n",
       "--------------------------------------------\n",
-      "Warning: your license will expire in 8 days\n",
+      "Warning: your license will expire in 3 days\n",
       "--------------------------------------------\n",
       "\n",
-      "Academic license - for non-commercial use only - expires 2021-08-11\n",
-      "Using license file /opt/gurobi/gurobi.lic\n"
+      "Using license file C:\\Users\\gabriele\\gurobi.lic\n",
+      "Academic license - for non-commercial use only\n"
      ]
     }
    ],
@@ -858,13 +858,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Gurobi Optimizer version 9.1.2 build v9.1.2rc0 (linux64)\n",
-      "Thread count: 6 physical cores, 12 logical processors, using up to 12 threads\n",
-      "Optimize a model with 13402 rows, 10965 columns and 72009 nonzeros\n",
-      "Model fingerprint: 0xf9d39e64\n",
-      "Model has 10212 quadratic constraints\n",
+      "Gurobi Optimizer version 9.0.3 build v9.0.3rc0 (win64)\n",
+      "Optimize a model with 3722 rows, 3105 columns and 19305 nonzeros\n",
+      "Model fingerprint: 0xaed80056\n",
+      "Model has 2712 quadratic constraints\n",
       "Model has 3 general constraints\n",
-      "Variable types: 0 continuous, 10965 integer (10584 binary)\n",
+      "Variable types: 0 continuous, 3105 integer (2904 binary)\n",
       "Coefficient statistics:\n",
       "  Matrix range     [1e+00, 3e+04]\n",
       "  QMatrix range    [1e+00, 2e+03]\n",
@@ -873,78 +872,68 @@
       "  Bounds range     [1e+00, 1e+00]\n",
       "  RHS range        [1e+00, 3e+04]\n",
       "  QRHS range       [4e+03, 4e+03]\n",
-      "Presolve removed 10518 rows and 5370 columns\n",
-      "Presolve time: 0.29s\n",
-      "Presolved: 41245 rows, 27423 columns, 135609 nonzeros\n",
-      "Presolved model has 5289 SOS constraint(s)\n",
-      "Variable types: 0 continuous, 27423 integer (10023 binary)\n",
+      "Presolve removed 2814 rows and 1446 columns\n",
+      "Presolve time: 0.09s\n",
+      "Presolved: 10997 rows, 7428 columns, 36051 nonzeros\n",
+      "Presolved model has 1449 SOS constraint(s)\n",
+      "Variable types: 0 continuous, 7428 integer (2718 binary)\n",
       "\n",
-      "Root relaxation: objective 2.237344e+05, 3051 iterations, 0.15 seconds\n",
+      "Root relaxation: objective 1.247790e+05, 1154 iterations, 0.03 seconds\n",
       "\n",
       "    Nodes    |    Current Node    |     Objective Bounds      |     Work\n",
       " Expl Unexpl |  Obj  Depth IntInf | Incumbent    BestBd   Gap | It/Node Time\n",
       "\n",
-      "     0     0 223734.410    0  591          - 223734.410      -     -    2s\n",
-      "     0     0 223966.911    0  668          - 223966.911      -     -    2s\n",
-      "     0     0 224634.710    0  435          - 224634.710      -     -    3s\n",
-      "     0     0 224664.326    0  625          - 224664.326      -     -    3s\n",
-      "     0     0 224664.326    0  628          - 224664.326      -     -    3s\n",
-      "     0     0 225601.972    0  723          - 225601.972      -     -    3s\n",
-      "     0     0 225682.500    0  647          - 225682.500      -     -    3s\n",
-      "     0     0 225686.526    0  635          - 225686.526      -     -    3s\n",
-      "     0     0 225890.724    0  753          - 225890.724      -     -    4s\n",
-      "     0     0 225992.140    0  712          - 225992.140      -     -    4s\n",
-      "     0     0 226010.909    0  727          - 226010.909      -     -    4s\n",
-      "     0     0 226114.390    0  717          - 226114.390      -     -    4s\n",
-      "     0     0 226114.390    0  696          - 226114.390      -     -    4s\n",
-      "     0     0 226259.373    0  736          - 226259.373      -     -    4s\n",
-      "     0     0 226279.348    0  674          - 226279.348      -     -    4s\n",
-      "     0     0 226354.044    0  763          - 226354.044      -     -    4s\n",
-      "     0     0 226407.768    0  677          - 226407.768      -     -    5s\n",
-      "H    4     0                    276992.00000 226817.496  18.1%   0.0    8s\n",
-      "H    4     0                    273973.00000 227674.285  16.9%   0.0    8s\n",
-      "H    4     0                    273283.00000 228188.201  16.5%   0.0    9s\n",
-      "H   42    41                    273220.00000 228256.325  16.5%   247    9s\n",
-      "H   70    71                    273160.00000 228256.325  16.4%   166    9s\n",
-      "H   82    82                    272980.00000 228256.325  16.4%   154    9s\n",
-      "H   85    82                    272674.00000 228256.325  16.3%   152    9s\n",
-      "   158   120 229000.144   22  402 272674.000 228296.374  16.3%   110   10s\n",
-      "H  287   170                    270220.00000 228296.374  15.5%  76.6   10s\n",
-      "* 1094   441              37    268621.00000 229144.784  14.7%  56.8   13s\n",
-      "* 1931   665              37    267208.00000 229847.641  14.0%  51.3   14s\n",
-      "  2225   750 230410.241   26  364 267208.000 230047.131  13.9%  51.5   15s\n",
-      "H 3919  1053                    266842.00000 230821.713  13.5%  43.8   18s\n",
-      "  3938  1066 233862.141   24  376 266842.000 230821.713  13.5%  43.6   20s\n",
-      "  4098  1102 234249.986   33  106 266842.000 230821.713  13.5%  45.9   25s\n",
-      "  4344  1085 231736.117   37  279 266842.000 230821.713  13.5%  45.6   30s\n",
-      "  5237   947 infeasible   39      266842.000 230821.713  13.5%  44.9   36s\n",
-      "  5837   816 infeasible   45      266842.000 230934.000  13.5%  43.9   41s\n",
-      "  6694   603 233479.321   39   79 266842.000 232158.274  13.0%  42.6   46s\n",
-      "  8577   562 infeasible   37      266842.000 234751.585  12.0%  40.2   50s\n",
-      "  9629   602 236474.000   42    4 266842.000 236474.000  11.4%  39.5   57s\n",
-      " 11947   573 252596.203   38  101 266842.000 243480.746  8.75%  37.0   61s\n",
-      " 15712    88 infeasible   52      266842.000 253608.000  4.96%  32.0   65s\n",
+      "     0     0 124779.000    0  236          - 124779.000      -     -    0s\n",
+      "     0     0 125153.327    0  342          - 125153.327      -     -    0s\n",
+      "H    0     0                    173913.00000 125153.327  28.0%     -    0s\n",
+      "     0     0 125196.847    0  219 173913.000 125196.847  28.0%     -    0s\n",
+      "     0     0 125371.110    0  246 173913.000 125371.110  27.9%     -    0s\n",
+      "     0     0 125371.110    0  248 173913.000 125371.110  27.9%     -    0s\n",
+      "     0     0 126897.432    0  155 173913.000 126897.432  27.0%     -    0s\n",
+      "     0     0 126932.665    0  220 173913.000 126932.665  27.0%     -    0s\n",
+      "H    0     0                    144257.00000 126932.665  12.0%     -    0s\n",
+      "     0     0 126933.271    0  219 144257.000 126933.271  12.0%     -    0s\n",
+      "     0     0 128846.255    0  300 144257.000 128846.255  10.7%     -    0s\n",
+      "H    0     0                    140879.00000 128846.255  8.54%     -    1s\n",
+      "     0     0 129417.964    0  238 140879.000 129417.964  8.14%     -    1s\n",
+      "     0     0 129448.776    0  315 140879.000 129448.776  8.11%     -    1s\n",
+      "     0     0 130231.400    0  484 140879.000 130231.400  7.56%     -    1s\n",
+      "     0     0 130231.400    0  237 140879.000 130231.400  7.56%     -    1s\n",
+      "     0     0 130231.400    0  286 140879.000 130231.400  7.56%     -    1s\n",
+      "     0     0 130231.400    0  357 140879.000 130231.400  7.56%     -    1s\n",
+      "     0     0 130231.400    0  305 140879.000 130231.400  7.56%     -    1s\n",
+      "     0     0 130387.883    0  291 140879.000 130387.883  7.45%     -    1s\n",
+      "     0     0 130459.361    0  323 140879.000 130459.361  7.40%     -    1s\n",
+      "     0     0 131039.885    0  275 140879.000 131039.885  6.98%     -    1s\n",
+      "     0     0 131563.000    0  218 140879.000 131563.000  6.61%     -    1s\n",
+      "     0     0 131563.000    0  209 140879.000 131563.000  6.61%     -    1s\n",
+      "     0     0 131563.000    0  210 140879.000 131563.000  6.61%     -    1s\n",
+      "     0     0 131563.000    0  214 140879.000 131563.000  6.61%     -    1s\n",
+      "     0     0 131563.000    0  213 140879.000 131563.000  6.61%     -    1s\n",
+      "     0     0 131563.000    0  216 140879.000 131563.000  6.61%     -    1s\n",
+      "     0     0 131629.261    0  213 140879.000 131629.261  6.57%     -    1s\n",
+      "     0     0 131629.261    0  213 140879.000 131629.261  6.57%     -    1s\n",
+      "     0     2 131631.920    0  211 140879.000 131631.920  6.56%     -    1s\n",
+      "*  240    56              21    139131.00000 135045.000  2.94%  22.4    2s\n",
+      "*  291    12              24    138063.00000 136442.029  1.17%  19.9    2s\n",
       "\n",
       "Cutting planes:\n",
-      "  Learned: 3\n",
-      "  Cover: 12\n",
-      "  Implied bound: 252\n",
-      "  Projected implied bound: 15\n",
-      "  Clique: 11\n",
-      "  MIR: 35\n",
-      "  StrongCG: 1\n",
-      "  Flow cover: 33\n",
-      "  Inf proof: 1\n",
-      "  RLT: 22\n",
-      "  Relax-and-lift: 54\n",
+      "  Learned: 1\n",
+      "  Cover: 1\n",
+      "  Implied bound: 124\n",
+      "  Clique: 3\n",
+      "  MIR: 19\n",
+      "  Flow cover: 7\n",
+      "  RLT: 20\n",
+      "  Relax-and-lift: 36\n",
       "\n",
-      "Explored 17271 nodes (539415 simplex iterations) in 65.54 seconds\n",
-      "Thread count was 12 (of 12 available processors)\n",
+      "Explored 347 nodes (13309 simplex iterations) in 2.23 seconds\n",
+      "Thread count was 8 (of 8 available processors)\n",
       "\n",
-      "Solution count 10: 266842 267208 268621 ... 273973\n",
+      "Solution count 5: 138063 139131 140879 ... 173913\n",
       "\n",
       "Optimal solution found (tolerance 1.00e-04)\n",
-      "Best objective 2.668420000000e+05, best bound 2.668420000000e+05, gap 0.0000%\n"
+      "Best objective 1.380630000000e+05, best bound 1.380630000000e+05, gap 0.0000%\n"
      ]
     }
    ],
@@ -972,7 +961,20 @@
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "MemoryError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mMemoryError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-20-3c425d9aba10>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     46\u001b[0m                 \u001b[0magent_trip\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     47\u001b[0m     \u001b[1;31m# Sort trip locations and make a domino list\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 48\u001b[1;33m     \u001b[0mdomino_agent\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0magent_visit\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdomino\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0magent_trip\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     49\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     50\u001b[0m     \u001b[1;31m# update main lists\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-20-3c425d9aba10>\u001b[0m in \u001b[0;36mdomino\u001b[1;34m(trip)\u001b[0m\n\u001b[0;32m     28\u001b[0m             \u001b[1;32mbreak\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     29\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 30\u001b[1;33m             \u001b[0msorted_visit\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdest\u001b[0m \u001b[1;32mif\u001b[0m \u001b[0mdest\u001b[0m \u001b[1;33m<\u001b[0m \u001b[0mCLIENTS\u001b[0m \u001b[1;32melse\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     31\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0msorted_trip\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msorted_visit\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     32\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mMemoryError\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "def domino(trip):\n",
     "    \"\"\" Function to calculate a domino sorted trip from a random one.\n",
@@ -1037,19 +1039,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Agent 1 trip: [0, 8, 11, 2, 20, 10, 15, 4, 1]\n",
-      "Agent 2 trip: [0, 13, 12, 19, 5, 0, 16]\n",
-      "Agent 3 trip: [14, 7, 6, 17, 3, 9, 18, 0]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# For each agent trip\n",
     "for a, avl in enumerate(agent_visit_list):\n",
@@ -1067,49 +1059,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Agent 1\n",
-      "  POSITION  COST TO REACH  REACHED AT  SERVICE TIME  REAL S. TIME  LEAVING TIME  LUNCH_BEFORE  WAIT_BEFORE  TW_START   TW_END\n",
-      "0   OFFICE            0.0        -0.0        3600.0        3600.0        3600.0           0.0         -0.0       0.0  28800.0\n",
-      "1        8          364.0      3964.0        2400.0        2400.0        6364.0           0.0         -0.0    3600.0   4600.0\n",
-      "2       11           82.0      6446.0        2400.0        2400.0        8846.0           0.0         -0.0    6000.0   7000.0\n",
-      "3        2          269.0      9115.0        2400.0        2400.0       11515.0           0.0         -0.0    8400.0   9400.0\n",
-      "4       20          914.0     12429.0        2400.0        2400.0       14829.0           0.0         -0.0   12300.0  13300.0\n",
-      "5       10          228.0     15057.0        2400.0        2400.0       17457.0           0.0         -0.0   15000.0  16000.0\n",
-      "6       15          652.0     19909.0        2400.0        2400.0       22309.0           1.0         -0.0   19800.0  20800.0\n",
-      "7        4           41.0     22350.0        2400.0        2400.0       24750.0           0.0         -0.0   22000.0  23000.0\n",
-      "8        1          144.0     24894.0        2400.0        2400.0       27294.0           0.0         -0.0   24800.0  25800.0\n",
-      "\n",
-      "Agent 2\n",
-      "  POSITION  COST TO REACH  REACHED AT  SERVICE TIME  REAL S. TIME  LEAVING TIME  LUNCH_BEFORE  WAIT_BEFORE  TW_START   TW_END\n",
-      "0   OFFICE            0.0        -0.0        3600.0        2383.0        2383.0           0.0         -0.0       0.0  28800.0\n",
-      "1       13          731.0      3114.0        2400.0        2400.0        5514.0           0.0         -0.0    2400.0   4300.0\n",
-      "2       12          186.0      5700.0        2400.0        2400.0        8100.0           0.0         -0.0    5700.0   6700.0\n",
-      "3       19          447.0      8547.0        2400.0        2400.0       10947.0           0.0         -0.0    8500.0   9500.0\n",
-      "4        5          361.0     11308.0        2400.0        2400.0       13708.0           0.0         -0.0   10900.0  11900.0\n",
-      "5   OFFICE         1338.0     15046.0        3600.0        2003.0       17049.0           0.0         -0.0       0.0  28800.0\n",
-      "6       16          551.0     19400.0        2400.0        2400.0       21800.0           1.0         -0.0   19400.0  20400.0\n",
-      "\n",
-      "Agent 3\n",
-      "  POSITION  COST TO REACH  REACHED AT  SERVICE TIME  REAL S. TIME  LEAVING TIME  LUNCH_BEFORE  WAIT_BEFORE  TW_START   TW_END\n",
-      "0       14            0.0        -0.0        2400.0        2400.0        2400.0           0.0         -0.0       0.0   1000.0\n",
-      "1        7          700.0      3100.0        2400.0        2400.0        5500.0           0.0         -0.0    3100.0   4100.0\n",
-      "2        6          171.0      5671.0        2400.0        2400.0        8071.0           0.0         -0.0    5500.0   6500.0\n",
-      "3       17          324.0      8395.0        2400.0        2400.0       10795.0           0.0         -0.0    8000.0   9000.0\n",
-      "4        3          258.0     11053.0        2400.0        2400.0       13453.0           0.0         -0.0   10600.0  11600.0\n",
-      "5        9           94.0     13547.0        2400.0        2400.0       15947.0           0.0         -0.0   13000.0  14000.0\n",
-      "6       18          144.0     16091.0        2400.0        2400.0       18491.0           0.0         -0.0   15300.0  16300.0\n",
-      "7   OFFICE          984.0     21275.0        3600.0        3600.0       24875.0           1.0         -0.0       0.0  28800.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Enlarge printable size\n",
     "pd.set_option('display.max_columns', 10)\n",
@@ -1153,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1165,7 +1117,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1179,7 +1131,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
